# cadex_test

./: .clang-format  .gitignore  CMakeLists.txt  README.md
.cache/clangd/index/: Curve.cpp.9338CF65990F971E.idx
src/lib/: CMakeLists.txt  Circle.cpp  Circle.h  Curve.h  Ellipse.cpp  Ellipse.h  Point3D.cpp  Point3D.h  Spiral.cpp  Spiral.h  Vector3D.cpp  Vector3D.h
src/sources/: CMakeLists.txt  main.cpp
